--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="#DDCE9E"
+    android:orientation="vertical"
+    android:padding="20dp">
+
+    <Button
+        android:id="@+id/bottomMostrarOcultar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Mostrar/Ocultar Grupo menu"
+        android:padding="15dp"
+        android:background="#888585"
+        android:textColor="#000000"
+        android:layout_margin="10dp"
+        android:textAlignment="center"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center"/>
+
 
 
 
