--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,27 @@
         android:layout_gravity="center_horizontal"
         android:gravity="center"/>
 
+    <LinearLayout
+        android:id="@+id/contenedorPopupMenu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_gravity="center_horizontal"
+        >
+        <TextView
+            android:id="@+id/tvTextoPopUpMenu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Pulse el popUp MEnu: "
+            android:gravity="center"/>
+        <ImageButton
+            android:id="@+id/buttonPopupMenu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@android:drawable/ic_menu_compass"/>
+    </LinearLayout>
+
 
 
 
